<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.UI.HomePage"
    android:background="@color/faded_light_blue">

    <ImageView
        android:id="@+id/rv_vector2"
        android:layout_width="113dp"
        android:layout_height="106dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/rv_vector1"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_3" />

    <ImageView
        android:id="@+id/rv_vector3"
        android:layout_width="113dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/rv_vector2"
        app:layout_constraintTop_toTopOf="@+id/rv_vector1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/vector_2" />

    <ImageView
        android:id="@+id/rv_vector1"
        android:layout_width="133dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/vector_1" />

    <TextView
        android:id="@+id/tv_mainpage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="50dp"
        android:text="@string/need_help"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_vector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/tv_mainpage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="50dp"
        android:text="@string/all_time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_vector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage1"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/tv_mainpage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="50dp"
        android:text="@string/helpdesk_center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_vector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage2"
        app:layout_constraintVertical_bias="0.2" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="360dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_mainpage4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/tell_us"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/tv_mainpage5"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="250dp"
            android:text="@string/Our_crew"
            android:textAlignment="center"
            android:textColor="#8F8E8E"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage4" />

        <RelativeLayout
            android:id="@+id/move_to_chatbot"
            android:layout_width="290dp"
            android:layout_height="75dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/chat_button"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage5">


            <TextView
                android:id="@+id/tv_mainpage7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignParentRight="@+id/imageView2"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-210dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="35dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/chat"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mainpage8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mainpage7"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-210dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/start"
                android:textColor="#8F8E8E"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_mainpage7"
                app:layout_constraintHorizontal_bias="0.222"
                app:layout_constraintStart_toStartOf="@+id/tv_mainpage7"
                app:layout_constraintTop_toBottomOf="@+id/tv_mainpage7" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="220dp"
                android:layout_marginBottom="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vector_bx_chat" />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/move_to_faq"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/chat_button"
            android:layout_width="290dp"
            android:layout_height="75dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/move_to_chatbot"
            app:layout_constraintVertical_bias="0.006">


            <TextView
                android:id="@+id/tv_mainpage9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_alignParentRight="@+id/imageView3"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-210dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="35dp"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/faq"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mainpage10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mainpage9"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-210dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/find"
                android:textColor="#8F8E8E"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_mainpage9"
                app:layout_constraintHorizontal_bias="0.169"
                app:layout_constraintStart_toStartOf="@+id/tv_mainpage9"
                app:layout_constraintTop_toBottomOf="@+id/tv_mainpage9" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="220dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vector_bx_help" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>