<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/faded_light_blue"
    >




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/chat_button"
        android:backgroundTint="#F9F9F9"
        app:layout_constraintBottom_toTopOf="@+id/rv_messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_above="@id/ll_layout_bar"
        android:layout_marginTop="110dp"
        android:background="#F9F9F9"
        app:layout_constraintBottom_toTopOf="@+id/ll_layout_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:itemCount="20"
        tools:listitem="@layout/message_item" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="360dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="320dp"
        android:src="@drawable/profile_frame"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:src="@drawable/vector_1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="25dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="17dp"
        android:text="@string/online"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green_700"
        android:src="@drawable/round_button"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/tv_online"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/vector_5"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="480dp"
        android:background="#F9F9F9"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_send"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:backgroundTint="@color/faded_light_blue"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_baseline_send_24"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_message"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
            tools:ignore="InvalidId,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="80dp"
            android:layout_weight=".5"
            android:background="@drawable/round_button"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint"
            android:inputType="textShortMessage"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>